test/.example-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goapp-debug-deployment
spec:
  selector:
    matchLabels:
      app: goapp-debug
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: goapp-debug
    spec:
      containers:
        - name: goapp-debug
          image: vcr.vngcloud.vn/60108-annd2-ingress/goapp-debug:v2.0.0

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: goapp-debug
  name: goapp-debug
  namespace: default
spec:
  ports:
    - port: 9999
      protocol: TCP
      targetPort: 9999
      name: "9999"
    - port: 8888
      protocol: TCP
      targetPort: 8888
      name: "8888"
    - port: 7777
      protocol: TCP
      targetPort: 7777
      name: "7777"
    - port: 6666
      protocol: TCP
      targetPort: 6666
      name: "6666"
    - port: 5555
      protocol: TCP
      targetPort: 5555
      name: "5555"
    - port: 4444
      protocol: TCP
      targetPort: 4444
      name: "4444"
    - port: 3333
      protocol: TCP
      targetPort: 3333
      name: "3333"
    - port: 2222
      protocol: TCP
      targetPort: 2222
      name: "2222"
    - port: 1111
      protocol: TCP
      targetPort: 1111
      name: "1111"
  selector:
    app: goapp-debug
  type: NodePort
