test/.secret.yaml
apiVersion: v1
kind: Secret
metadata:
  name: secret-annd2
type: kubernetes.io/tls
data:
  # values are base64 encoded, which obscures them but does NOT provide
  # any useful level of confidentiality
  tls.crt: |
    LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUZQVENDQXlVQ0ZEbXFDUVZ3OUJVRXNkUTUy
[...]

  tls.key: |
    LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUpRZ0lCQURBTkJna3Foa2lHOXcwQkFRRUZB
[...]
    LS1FTkQgUFJJVkFURSBLRVktLS0tLQo=

---
apiVersion: v1
kind: Secret
metadata:
  name: secret-wildcard-annd2
type: kubernetes.io/tls
data:
  # values are base64 encoded, which obscures them but does NOT provide
  # any useful level of confidentiality
  tls.crt: |
    LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUZRVENDQXlrQ0ZEa0ZhbEIwNVFoOXlEUzMz
[...]
    LQo=

  tls.key: |
    LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUpRZ0lCQURBTkJna3Foa2lHOXcwQkFRRUZB
[...]
    LS1FTkQgUFJJVkFURSBLRVktLS0tLQo=
