test/.vngcloud-ingress-controller.yaml
---
kind: ServiceAccount
apiVersion: v1
metadata:
  name: vngcloud-ingress-controller
  namespace: kube-system
---
kind: ClusterRoleBinding
apiVersion: rbac.authorization.k8s.io/v1
metadata:
  name: vngcloud-ingress-controller
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: cluster-admin
subjects:
  - kind: ServiceAccount
    name: vngcloud-ingress-controller
    namespace: kube-system
---
kind: Secret
apiVersion: v1
metadata:
  name: vngcloud-ingress-controller-config
  namespace: kube-system
stringData:
  config: |
    clusterID: 
    global:
      identityURL: https://iamapis.vngcloud.vn/accounts-api/v2
      vserverURL: https://hcm-3.api.vngcloud.vn/vserver/vlb-gateway/v2
      clientID: 
      clientSecret: 

---
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: vngcloud-ingress-controller
  namespace: kube-system
  labels:
    k8s-app: vngcloud-ingress-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: vngcloud-ingress-controller
  serviceName: vngcloud-ingress-controller
  template:
    metadata:
      labels:
        k8s-app: vngcloud-ingress-controller
    spec:
      serviceAccountName: vngcloud-ingress-controller
      tolerations:
        - effect: NoSchedule # Make sure the pod can be scheduled on master kubelet.
          operator: Exists
        - key: CriticalAddonsOnly # Mark the pod as a critical add-on for rescheduling.
          operator: Exists
        - effect: NoExecute
          operator: Exists
      containers:
        - name: vngcloud-ingress-controller
          image: vcr.vngcloud.vn/60108-annd2-ingress/vngcloud-ingress-controller:v0.0.0
          imagePullPolicy: Always
          args:
            - /bin/vngcloud-ingress-controller
            - -v=5
            - --config=/etc/config/vngcloud-ingress-controller-config.yaml
          volumeMounts:
            - mountPath: /etc/kubernetes
              name: kubernetes-config
              readOnly: true
            - name: ingress-config
              mountPath: /etc/config
      hostNetwork: true
      volumes:
        - name: kubernetes-config
          hostPath:
            path: /etc/kubernetes
            type: Directory
        - name: ingress-config
          secret:
            secretName: vngcloud-ingress-controller-config
            items:
              - key: config
                path: vngcloud-ingress-controller-config.yaml
---
